Fixing the modal overlasy of settings not showing in the tech page

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5663,7 +5663,7 @@ a.prediction-link:hover {
   display: none;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  z-index: 1000001;
 }
 
 .modal-overlay.active {
